--- a/js/panorama_preview.css
+++ b/js/panorama_preview.css
@@ -2,8 +2,9 @@
     position: absolute;
     top: 5px;
     left: 5px;
-    width:1170px;
-    height:585px;
+    width:1200px;
+/*     height:585px; */
+    height:600px;
     padding:5px;
     background:#99ff99;
 }
